# cubic-splines

./: Cargo.toml  README.md
src/: cubic_poly.rs  lib.rs  zero.rs
