[package]
name = "cubic-splines"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roots = "0.0.6"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
serialization = ["serde", "serde_derive"]
